- Zombified NPC Loadouts: Overhaul.
A mashup of Clear Sky, Bandits, Army and Renegades for the biggest and most chaotic npc loadouts out there. Kinda deserved it though as they're beyond a rarity anyways.

--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
@@ -3,111 +3,70 @@
 
 [zombied_novice]:zombied
 primary = zombied_novice_primary
+secondary = zombied_novice_secondary
 
 [zombied_trainee]:zombied
+primary = zombied_trainee_primary
+secondary = zombied_trainee_secondary
 
 [zombied_experienced]:zombied
 primary = zombied_experienced_primary
+secondary = zombied_experienced_secondary
 
 [zombied_professional]:zombied
+primary = zombied_professional_primary
+secondary = zombied_professional_secondary
 
 [zombied_veteran]:zombied
 primary = zombied_veteran_primary
+secondary = zombied_veteran_secondary
 
 [zombied_expert]:zombied
+primary = zombied_expert_primary
+secondary = zombied_expert_secondary
 
 [zombied_master]:zombied
 primary = zombied_master_primary
+secondary = zombied_master_secondary
 
 [zombied_legend]:zombied
+primary = zombied_legend_primary
+secondary = zombied_legend_secondary
 
 ;----------------------------------------------------
+
 [zombied_novice_primary]
-wpn_mp443:0:0
-wpn_aps:0:0
-wpn_oc33:0:0
-wpn_pl15:0:0
-wpn_gsh18:0:0
-wpn_gsh18:0:0
-wpn_pb_custom:0
-wpn_pb_custom:0:0
-wpn_pm_custom:0
-wpn_pm_custom:0:0
-wpn_pm_custom:0:0
-wpn_tt33_modern:0:0
-wpn_tt33_modern:0:0
-wpn_colt1911:0:0
-wpn_fn57:0:0
 
-
-wpn_pp2000:0:0
-wpn_bizon:0:0
 wpn_kiparis:0:0
 wpn_kiparis:0:0
-wpn_vityaz:0:0
-wpn_vityaz:0:0
 wpn_vz61:0:0
 wpn_vz61:0:0
+wpn_ppsh41:0:3
+
+wpn_sks_b:0:0
 
 wpn_bm16_full:0:3
+wpn_bm16:0:3
 wpn_toz34:0:3
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
+wpn_toz34_obrez:0:3
 wpn_wincheaster1300:0:3
-wpn_remington870:0:3
 wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta:0:0
+wpn_protecta:0:0
 
-wpn_ppsh41:0:3
-wpn_ppsh41:0:3
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
 
-wpn_sks_b:0:0
-wpn_sks_b:0:0
-wpn_sks_b:0:0
-wpn_sks_molot:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-
-wpn_mosin:0:0
-wpn_svds:0:0
-
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_vintorez_n1:0:0
-
-wpn_ak74_n:0:0
-wpn_ak74m_n:0:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
 wpn_ak74u_n1:0:0
-
-
-wpn_mp412:0:0
-wpn_mp412:0:0
-wpn_beretta_modern:0:0
-wpn_beretta_modern:0:0
-wpn_colt1911:0:0
-wpn_colt1911_camo:0:0
-wpn_colt1911_custom:0:0
-wpn_colt1911:0:0
-wpn_colt1911:0:0
-wpn_glock:0:0
-wpn_glock_modern:0:0:25
-wpn_beretta_modern:0:0
-wpn_walther_p99:0:0
-wpn_walther_p99:0:0
-wpn_sig226:0:0
-wpn_sig226:0:0
-wpn_usp_match:0:0
-
-wpn_ump45:0:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_ppsh41:0:0
-
-wpn_ump45:0:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_ppsh41:0:0
+wpn_sks_b:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
 
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
@@ -116,393 +75,1106 @@ wpn_toz34:0:3
 wpn_toz34:0:3
 wpn_toz106_m1:0:3
 wpn_toz106_m1:0:3
-wpn_mp133:0:3
+wpn_protecta:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+
+wpn_ump45:r:0
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
+
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_toz106_m1:0:3
+wpn_protecta:0:3
+wpn_protecta:0:3
+wpn_protecta:0:3
+
+wpn_bizon:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+
+wpn_sks_b:r:0
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+
+wpn_wincheaster1300:0:3
+
+[zombied_novice_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+
+[zombied_trainee_primary]
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0   
+
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta:0:0
+
+wpn_bizon:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+
+wpn_sks_b:r:0 
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_akm_bas:0:0
+
+wpn_wincheaster1300:0:3
+
+wpn_ump45:r:0
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
+
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_toz106_m1:0:3
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta:0:3
+wpn_protecta_aim:0:3
 wpn_wincheaster1300:0:3
 wpn_remington870:0:3
-wpn_mp153_m1:0:3
-wpn_ithacam37_stakeout:0:3
 
-wpn_k98:0:0
+[zombied_trainee_secondary]
 
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_mp443:0:0
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
 
 [zombied_experienced_primary]
-wpn_pp2000:0:0
-wpn_pp2000:0:0
-wpn_bizon:0:0
-wpn_bizon:0:0
+
 wpn_kiparis:0:0
 wpn_kiparis:0:0
-wpn_vityaz:0:0
-wpn_vityaz:0:0
 wpn_vz61:0:0
 wpn_vz61:0:0
-
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_wincheaster1300:0:3
-wpn_saiga12s_m2:0:3
-
 wpn_ppsh41:0:3
 wpn_ppsh41:0:3
+wpn_bizon:0:0
 
 wpn_sks_b:0:0
-wpn_sks_molot:0:0
 wpn_sks_b:0:0
-wpn_sks_b:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_rpk:0:0
-wpn_ak103:0:0
+wpn_adar2_15:0:0
+wpn_mosin:r:0
 
-wpn_mosin:0:0
-wpn_svds:0:0
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
+
+wpn_bizon:0:6
+wpn_vityaz:0:6
+wpn_kiparis:0:6
+
+wpn_sks_tac:r:0 
+wpn_ak74u_n1:0:6
+wpn_ak74u_n1:0:6
+wpn_ak74_n:0:6
+wpn_ak74_n:0:6
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
 wpn_sv98:0:0
 
-wpn_groza:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
+wpn_wincheaster1300:0:3
 
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak105:0:0
-wpn_abakan_n:0:0:50
-wpn_abakan_n:0:0
-wpn_rpk74_16:0:0:60
-wpn_ak74u_tac:0:0
-wpn_ak12_m1:0:0
+wpn_ump45:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
 
-wpn_fal_sa58_osw:0:0
-
-wpn_ak5c_bas:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
 wpn_sig552:0:0
-
-wpn_sig226:0:0
-
-wpn_ump45:0:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_ppsh41:0:0
-wpn_mp5:0:0
-wpn_mp5sd_custom:0:0
-
-wpn_ump45:0:0
-wpn_vz61:0:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_ppsh41:0:0
-wpn_mp5:0:0
-wpn_mp5sd_custom:0:0
-
-wpn_ump45:0:0
-wpn_vz61:0:0
-wpn_vz61:0:0
-wpn_pp2000:0:0
-wpn_ppsh41:0:0
-wpn_mp5:0:0
-wpn_mp5sd_custom:0:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
 
 wpn_bm16:0:3
 wpn_toz34_obrez:0:3
 wpn_bm16_full:0:3
 wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_toz106_m1:0:3
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_sig552:0:0
+wpn_m4_ru556:r:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_ak74_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_remington870:0:3
+wpn_mp133:0:3
+
+[zombied_experienced_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_mp443:0:0
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_mp412:0:0
+
+[zombied_professional_primary]
+
+wpn_kiparis:0:0
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+
+wpn_bm16_full:0:3
+wpn_bm16:0:3
+wpn_toz34:0:3
+wpn_toz34_obrez:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta_aim:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
+
+wpn_bizon:0:6
+wpn_pp2000:0:6
+
+wpn_sks_tac:r:0 
+wpn_ak74u_tac:0:6
+wpn_ak74u_tac:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_abakan_n:r:0:50
+wpn_sv98:0:0
+wpn_val:0:0
+
+wpn_mp133:0:3
+
+wpn_ump45:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_sig552:0:0
+wpn_sig552:0:0
+wpn_ak105:0:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
 wpn_toz106_m1:0:3
 wpn_mp133:0:3
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_ump45:0:3
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_sig552:0:0
+wpn_m4_ru556:0:0
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_ak74_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
 wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_mp153_m1:0:3
-wpn_ithacam37_stakeout:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
 
-wpn_k98:0:0
-wpn_k98:0:0
+[zombied_professional_secondary]
 
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_pl15:0:0
+
+wpn_pm_custom:0:0
+wpn_tt33_modern:0:0
+wpn_mp443:0:0
+
+wpn_pm_custom:0:0
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
 
 [zombied_veteran_primary]
-wpn_pp2000:0:0
-wpn_pp2000:0:0
+
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
 wpn_bizon:0:0
-wpn_vityaz:0:0
 
-wpn_toz34_mark4_23:0:0
-
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_wincheaster1300:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
-
-wpn_sks_tac:0:0
 wpn_sks_b:0:0
-wpn_sks_molot:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_rpk:0:0
-wpn_ak103:0:0
+wpn_sks_b:0:0
+wpn_mosin:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+wpn_ak74_n:r:0
+wpn_akm_bas:r:0
 
-wpn_svds:0:0
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_wincheaster1300:0:3
+wpn_toz106_m1:0:0
+wpn_protecta_aim:0:0
+wpn_protecta_aim:0:0
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+
+wpn_pp2000:0:6
+
+wpn_ak74u_tac:0:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_abakan_n:r:0:50
+wpn_abakan_n:r:0:50
+wpn_val:0:0
+wpn_vihr:0:3
+wpn_groza:0:0
+
+wpn_rpk:0:0
+wpn_pkm_siber:r:0:50
+wpn_pkp_siber:r:0:50
+
 wpn_sv98:0:0
 wpn_svd_m1:0:0
 
+wpn_mp133:0:3
+
+wpn_ump45:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+wpn_pp2000:0:0
+wpn_mp7:r:0:25
+wpn_mp7:r:0:25
+
+wpn_adar2_15:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_mp133:0:3
+wpn_mp133:0:3
+wpn_spas12:0:3
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_ump45:0:3
+
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_sks_molot:0:0
+wpn_sig552:0:0
+wpn_sig552:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:r:0:50
+
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_remington700:0:0
+
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+
+[zombied_veteran_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_pl15:0:0
+
+wpn_gsh18:0:0
+wpn_mp443:0:0
+
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+
+[zombied_expert_primary]
+
+wpn_kiparis:0:0
+wpn_vz61:0:0
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_mosin:r:0
+wpn_sv98:r:0
+wpn_svd_m1:r:0
+wpn_winchester1873:0:0
+
+wpn_sks_b:0:0
+wpn_sks_b:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_n1:r:0
+wpn_ak74_n:r:0
+wpn_ak74_n:r:0
+wpn_ak74m_n:r:0
+wpn_akm_bas:r:0
+
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
+wpn_toz34_mark4_23:0:0
+
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_abakan_n:r:0:50
+wpn_abakan_n:r:0:50
+wpn_ash12:0:3
+wpn_vihr:0:3
+wpn_vihr:0:3
 wpn_groza:0:0
 wpn_groza:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_val:0:0
-wpn_val:0:0
+wpn_rpk:0:0
 
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:0:0
-wpn_ak74u_tac:0:0
-wpn_ak74u_tac:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_abakan_n:0:0:25
-wpn_abakan_n:0:0:25
-wpn_abakan_n:0:0
-wpn_abakan_n:0:0
-wpn_rpk74_16:0:0:60
-wpn_rpk74_16:0:0:60
-wpn_ak12_m1:0:0
-wpn_ak12_m1:0:0
-wpn_ak12_m1:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:0:5
+wpn_sv98:0:0
+wpn_svds:0:0
 
-wpn_k98_mod:0:0
+wpn_mp153_m1:0:3
 
-wpn_p90gamma:0:3
-wpn_p90gamma:0:3
+wpn_ump45:r:0
+wpn_mp5:r:0
+wpn_mp5sd_custom:r:0
+wpn_pp2000:0:0
+wpn_mp7:r:0:25
+wpn_mp7:r:0:25
+
+wpn_adar2_15:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
+wpn_ak105:0:0
+wpn_winchester1873:0:0:75
+wpn_winchester1873:0:0:75
+wpn_fal_sa58_osw:r:0
+wpn_l96a1m:r:0:75
+
+wpn_mp133:0:3
+wpn_mp133:0:3
+wpn_mp153_m1:0:3
+wpn_spas12:0:3
+
+wpn_vz61:0:0
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
 wpn_mp7:0:0:25
 
-wpn_m4a1_siber:4:6:35
-wpn_sig550:4:6:35
-
-wpn_ak5c_bas:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:0:0:50
-wpn_g36ka4_rwap:0:0:50
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
+wpn_adar2_15:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_b:0:0
+wpn_sks_molot:0:0
+wpn_sks_molot:0:0
+wpn_sig552:0:0
+wpn_sig552:0:0
+wpn_sig550:0:0
 wpn_m4_ru556:0:0
-wpn_sig550:0:0
-wpn_sig552:0:0
-
-wpn_ak5c_bas:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:0:0:50
-wpn_g36ka4_rwap:0:0:50
-wpn_l85_m2:4:0
+wpn_ak74_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
 wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:6
-wpn_sig550:0:0
-wpn_sig552:0:0
+wpn_abakan_n:r:0:50
 
-wpn_mp5:0:0
-wpn_mp5:0:0
-wpn_mp5sd_custom:0:0
-wpn_mp5sd_custom:0:0
-wpn_ump45:0:3
-wpn_mp5_nimble:0:0:25
+wpn_winchester1873:0:0:75
+wpn_mosin:r:0
+wpn_k98:r:0
+wpn_remington700:0:0
 
-wpn_k98:0:0
-wpn_k98:0:0
-wpn_k98:0:0
-
-wpn_spas12:0:3:25
+wpn_bm16_full:0:3
+wpn_toz34:0:3
+wpn_toz106_m1:0:3
+wpn_protecta_aim:0:3
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
 wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
-wpn_toz34_mark4_23:0:0
-wpn_ithacam37_stakeout:0:3
-wpn_ithacam37_trench:0:3:75
-wpn_ithacam37_trench:0:3:25
 
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
+[zombied_expert_secondary]
+
+wpn_pb_custom:0:0
+wpn_pm_custom:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_tt33_modern:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_pl15:0:0
+
+wpn_gsh18:0:0
+wpn_mp443:0:0
+
+wpn_pm_custom:0:0
+wpn_pb_custom:0:0
+wpn_tt33_modern:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
 
 [zombied_master_primary]
-wpn_pp2000:0:0
-wpn_pp2000:0:0
-wpn_bizon:0:0
-wpn_vityaz:0:0
 
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sv98:r:0
+wpn_svd_m1:r:0
+wpn_winchester1873:0:0
+
+wpn_sks_tac:r:3
+wpn_sks_molot:r:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74_n:r:0
+wpn_ak74m_n:r:0
+wpn_ak74m_n:0:6
+wpn_akm_bas:r:0
+wpn_ak105:0:6
+wpn_vintorez_n1:r:3
+wpn_groza:r:0
+wpn_groza:r:0
+
+wpn_rpk:0:r
+
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
 wpn_toz34_mark4_23:0:0
 
-wpn_protecta:0:3
-wpn_protecta_aim:0:3
-wpn_wincheaster1300:0:3
-wpn_remington870:0:3
-wpn_wincheaster1300:0:3
-wpn_saiga12s_m2:0:3
-wpn_saiga12s_m2:0:3
+wpn_ak74m_n:r:6
+wpn_ak74m_n:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_abakan_n:r:0:50
+wpn_abakan_n:r:0:50
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_groza:0:0
+wpn_groza:0:0
 
-wpn_sks_tac:0:0
-wpn_sks_b:0:0
-wpn_sks_molot:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_akm_bas:0:0
-wpn_rpk:0:0
-wpn_ak103:0:0
+wpn_rpk74_16:0:3:60
+wpn_pkm_siber:r:0:50
+wpn_pkp_siber:r:0:50
 
-wpn_svds:0:0
 wpn_sv98:0:0
-wpn_svd_m1:0:0
+wpn_svds:0:0
 
-wpn_groza:0:0
-wpn_groza:0:0
-wpn_9a91:0:0
-wpn_9a91:0:0
-wpn_vintorez_n1:0:0
-wpn_vintorez_n1:0:0
-wpn_val:0:0
-wpn_val:0:0
+wpn_mp153_m1:0:3
+wpn_ks23:0:1
 
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74m_n:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_n1:0:0
-wpn_ak74u_tac:0:0
-wpn_ak74u_tac:0:0
-wpn_ak74u_tac:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_ak105:0:0
-wpn_abakan_n:0:0:25
-wpn_abakan_n:0:0:25
-wpn_abakan_n:0:0
-wpn_abakan_n:0:0
-wpn_rpk74_16:0:0:60
-wpn_rpk74_16:0:0:60
-wpn_ak12_m1:0:0
-wpn_ak12_m1:0:0
-wpn_ak12_m1:0:0
-wpn_ak74m_n:0:0
-wpn_ak74_n:0:0:5
+wpn_ump45:r:0
+wpn_mp5_nimble:r:0
+wpn_mp5sd_custom:r:0
+wpn_pp2000:0:0
+wpn_mp7:r:0:25
+wpn_mp7:r:0:25
 
-wpn_k98_mod:0:0
+wpn_m4_ru556:r:0
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_sig550:r:0
+wpn_ak105:r:0
+wpn_ak105:r:0
+wpn_ak105:r:0
+wpn_winchester1873:0:0:75
+wpn_fal_sa58_osw:r:0
+wpn_l96a1m:r:0:75
 
-wpn_p90gamma:0:3
-wpn_p90gamma:0:3
+wpn_mp133:0:3
+wpn_mp153_m1:0:3
+wpn_mp153_m1:0:3
+wpn_spas12:0:3
+
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_mp5:0:6
+wpn_mp5sd_custom:0:6
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
+wpn_mp7:0:0:25
 wpn_mp7:0:0:25
 
-wpn_m4a1_siber:4:6:35
-wpn_sig550:4:6:35
-
-wpn_ak5c_bas:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:0:0:50
-wpn_g36ka4_rwap:0:0:50
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
+wpn_adar2_15:0:0
+wpn_ak74u_n1:0:0
+wpn_sks_molot:0:0
+wpn_sks_molot:0:0
 wpn_sig552:0:0
-
-wpn_ak5c_bas:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_ak101:0:0
-wpn_aug_modern:0:0
-wpn_aug_modern:0:0
-wpn_aug_merc:0:0
-wpn_aug_merc:0:0
-wpn_g36ka4_rwap:0:0:50
-wpn_g36ka4_rwap:0:0:50
-wpn_l85_m2:4:0
-wpn_m4a1_siber:0:0
-wpn_m4_ru556:0:0
-wpn_sig550:0:0
 wpn_sig552:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:0:0:50
+wpn_scar_siber:0:3:25
 
-wpn_mp5:0:0
-wpn_mp5:0:0
-wpn_mp5sd_custom:0:0
-wpn_mp5sd_custom:0:0
-wpn_ump45:0:3
-wpn_mp5_nimble:0:0:25
+wpn_winchester1873:0:0:75
+wpn_k98:r:0
+wpn_remington700:r:0
 
-wpn_k98:0:0
-wpn_k98:0:0
-wpn_k98:0:0
-
-wpn_spas12:0:3:25
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
 wpn_mp153_m1:0:3
-wpn_mp153_m1:0:3
+
+[zombied_master_secondary]
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock:0:0
+wpn_glock_modern:0:0
+wpn_fn57:0:0
+wpn_sr1m:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911_camo:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_pl15:0:0
+
+wpn_gsh18:0:0
+wpn_mp443:0:0
+
+wpn_colt1911:0:0
+wpn_colt1911:0:0
+wpn_aps:0:0
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+
+[zombied_legend_primary]
+
+wpn_ppsh41:0:3
+wpn_ppsh41:0:3
+wpn_bizon:0:0
+
+wpn_sv98:r:0
+wpn_svds:r:0
+
+wpn_ak74u_tac:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74u_tac:r:0
+wpn_ak74m_n:r:0
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak105:0:6
+wpn_ak104_alfa:r:0
+wpn_vintorez_n1:r:3
+wpn_groza:r:0
+wpn_groza:r:0
+wpn_groza:r:0
+
+wpn_rpk74_16:r:0
+
+wpn_ks23:0:3
+wpn_ithacam37_trench:0:3:50
+wpn_ithacam37_trench:0:3:50
 wpn_toz34_mark4_23:0:0
-wpn_ithacam37_stakeout:0:3
-wpn_ithacam37_trench:0:3:75
-wpn_ithacam37_trench:0:3:25
 
-wpn_adar2_15:0:0
-wpn_adar2_15:0:0
+wpn_ak105:r:6
+wpn_ak105:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak12_m1:r:6
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_ak104_alfa:0:0
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_groza:0:0
+wpn_groza:0:0
 
-wpn_pkm_siber:0:0
-wpn_pkp_siber:0:0:50
+wpn_rpk74_16:0:3:60
 
+wpn_svds_pmc:0:0
 
+wpn_mp153_m1:0:3
+wpn_ks23:0:1
+wpn_saiga12s_m2:0:3
+
+wpn_kriss_vector:r:3
+wpn_mp5_nimble:r:0
+wpn_mp5_nimble:r:0
+wpn_mp7:r:0:25
+wpn_mp7:r:0:25
+     
+wpn_sig552:r:0
+wpn_sig552:r:0
+wpn_sig550:r:0
+wpn_sig550:r:0
+wpn_ak105_swamp:r:0
+wpn_ak105_swamp:r:0
+wpn_ak105_swamp:r:0
+wpn_fal_sa58_osw:r:0
+wpn_fal_sa58_osw:r:0
+wpn_fal_sa58_osw:r:0
+wpn_m249:r:0:50
+wpn_l96a1m:r:0:75
+
+wpn_mp133:0:3
+wpn_mp153_m1:0:3
+wpn_mp153_m1:0:3
+wpn_spas12:0:3
+
+wpn_pp2000:0:0
+wpn_ppsh41:0:0
+wpn_mp5_nimble:0:0
+wpn_mp5_nimble:0:0
+wpn_mp5_nimble:0:0
+wpn_ump45:0:3
+wpn_mp7:0:0:25
+wpn_mp7:0:0:25
+
+wpn_ak74u_tac:0:0
+wpn_sks_molot:0:0
+wpn_sks_tac:0:0
+wpn_sig550:0:0
+wpn_sig550:0:0
+wpn_m4_ru556:0:0
+wpn_ak74m_n:0:0
+wpn_ak74m_n:0:0
+wpn_ak105:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_akm_bas:0:0
+wpn_m4a1_siber:0:0
+wpn_m4a1_siber:0:0
+wpn_abakan_n:0:0:50
+wpn_scar_siber:0:3:25
+wpn_scar_siber:0:3:25
+wpn_scar_siber:0:3:25
+wpn_ash12:0:3
+wpn_ash12:0:3
+wpn_ash12:0:3
+
+wpn_winchester1873:0:0:75
+wpn_k98:r:0
+wpn_remington700:r:0
+
+wpn_wincheaster1300:0:3
+wpn_mp133:0:3
+wpn_ithacam37_trench:0:3
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_spas12:0:3:75
+wpn_mp153_m1:0:3
+
+[zombied_legend_primary]
+
+wpn_oc33:0:0
+wpn_oc33:0:0
+wpn_colt1911_camo:0:0
+wpn_colt1911:0:0
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_sig226:0:0
+wpn_bm16:0:3
+wpn_toz34_obrez:0:3
+wpn_pl15:0:0
+wpn_usp_match:0:0
+wpn_glock_modern:0:0
+wpn_glock_modern:0:0
+wpn_fn57:0:0
+wpn_sr1m:0:0
+
+wpn_mp412:0:0
+wpn_beretta_modern:0:0
+wpn_beretta_modern:0:0
+wpn_colt1911_camo:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_sig226:0:0
+wpn_pl15:0:0
+
+wpn_gsh18:0:0
+wpn_mp443:0:0
+
+wpn_aps:0:0
+wpn_oc33:0:0
+wpn_mp412:0:0
+wpn_mp443:0:0
+wpn_mp443:0:0
+wpn_toz34_obrez:0:3
+wpn_bm16:0:3
+wpn_sr1m:0:0
+wpn_sr1m:0:0
+wpn_sr1m:0:0
