- UNISG Starting Loadouts: Overhaul
Fixes a bug with the zombified loadouts also.

--- a/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -494,21 +494,26 @@ greh_trenchcoat_outfit = true,1,50
 
 [isg_loadout]:shared
 isg_patch = false,1,0
-wpn_knife = false,1,0
+wpn_knife5 = false,1,0
 device_pda_1 = false,1,0
-itm_backpack = false,1,0
-device_pda_3 = true,1,300 
+equ_small_military_pack = false,1,0
 
-helm_respirator_gp5 = true,1,50
-helm_ach7ex = true,1,200 
+wpn_sr25 = true,1,1140
+wpn_sil_sr25 = true,1,25
+wpn_m4_ru556 = true,1,650
+wpn_mp5sd = true,1,400
+remington870 = true,1,350
 
-wpn_mossberg590 = true,1,1050
-wpn_aug_freedom = true,1,400
-wpn_mp5sd = true,1,650
-wpn_pl15 = true,1,225
-wpn_vz61 = true,1,325
-wpn_fnp45 = true,1,225
-wpn_fn57 = true,1,325
+wpn_pl15 = true,1,100
+wpn_sil_9mm = true,1,25
+wpn_usp_match = true,1,125
+wpn_sil_gemtech = true,1,25
+wpn_fn57 = true,1,125
+wpn_sil_57 = true,1,25
+
+grenade_m67 = true,3,125
+
+af_plates = true,1,50
 
 yadylin = true,2,50
 drug_sleepingpills = true,2,75
@@ -522,20 +527,22 @@ ration_ukr = true,1,200
 vodka = true,3,150
 cigarettes_russian = true,2,30
 drug_booster = true,1,250
-
-af_spaika = true,1,75
-af_repei = true,1,75 
-
-;wpn_sil_9mm = true,1,50
-;wpn_sil_pl15 = true,1,25
-;wpn_sil_gemtech = true,1,25
-
-isg_lcs_outfit = true,1,50
-ghillie_outfit = true,1,550 
-
 medkit_army = true,2,75
 morphine = true,3,25
 mre = true,1,25
+
+device_torch_nv_1 = true,1,75
+detector_simple = true,1,75
+detector_radio = true,1,5
+detector_geiger = true,1,5
+device_pda_3 = true,1,300
+
+isg_lcs_camo_outfit = true,1,50
+isg_outfit = true,1,450 
+
+helm_ach7 = true,1,10
+helm_m50 = true,1,150
+helm_ach7ex = true,1,175
 
 [zombied_loadout]:shared,stalker_loadout
 
