--- a/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
+++ b/gamedata/configs/items/settings/npc_loadouts/npc_loadouts_zombied.ltx
@@ -1137,7 +1137,7 @@ wpn_spas12:0:3:75
 wpn_spas12:0:3:75
 wpn_mp153_m1:0:3
 
-[zombied_legend_primary]
+[zombied_legend_secondary]
 
 wpn_oc33:0:0
 wpn_oc33:0:0
